--- a/scripts/preprocessing_clinspell.ipynb
+++ b/scripts/preprocessing_clinspell.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clinspell Annotation in MIMIC-III v1.4\n",
+    "# Misspelling Dataset (Clinspell) of MIMIC-III v1.4\n",
     "\n",
     "This scripts provides the Clinspell dataset ([GitHub](https://github.com/clips/clinspell)) in MIMIC-III v1.4, which is converted from v1.3, the version that the Clinspell dataset originally used.\n",
     "By the update in the MIMIC-III dataset from v1.3 to v1.4 (See the release note of MIMIC-III 1.4), there are some changes in the `NOTEEVENTS` table.\n",
