Add NOTEEVENTS split snippet to vocab build notebook

--- a/scripts/build_vocab_corpus.ipynb
+++ b/scripts/build_vocab_corpus.ipynb
@@ -1,30 +1,119 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Build Lexicon for CIM\n",
-    "\n",
-    "This notebook builds a lexicon used in synthetic misspelling generation and dictionary matching for our character language model.\n",
-    "\n",
-    "1. For English words, please download `english.txt` from [here](https://github.com/dwyl/english-words/tree/7cb484da5de560c11109c8f3925565966015e5a9) (the version of Aug 23, 2020, or commit 7cb484d) and put under `data/english_words`.\n",
-    "2. For medical lexicon, Download LRWD and prevariants of the SPECIALIST Lexicon from [LSG website](https://lhncbc.nlm.nih.gov/LSG/Projects/lexicon/current/web/release/) (we use 2018AB version) and and put under `data/umls`. \n",
-    "3. To compare the generated lexicon with the lexicon of Fivez et al. please download `lexicon_en.json` file from https://github.com/clips/clinspell/tree/master/data and put under `data/mimic_clinspell`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import collections\n",
     "import os\n",
     "import json\n",
-    "import re\n",
-    "from tqdm.notebook import tqdm\n",
     "import random\n",
-    "import collections"
+    "import re\n",
+    "\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prepare MIMIC-III corpus\n",
+    "\n",
+    "This part splits the `NOTEEVENTS.csv` of MIMIC-III into multiple files so the multi-thread dataset workers can randomly sample clinical notes with less memory overhead.\n",
+    "\n",
+    "- Please put `NOTEEVENTS.csv` of the MIMIC-III (v1.4) under `data/mimic3`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mimic_dir = '../data/mimic3'\n",
+    "orig_note_fpath = os.path.join(mimic_dir, 'NOTEEVENTS.csv')\n",
+    "note_per_split = 100000\n",
+    "note_split_dir = os.path.join(mimic_dir, 'split')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/mimic3/NOTEEVENTS.csv - 2083180\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the original MIMIC-III note\n",
+    "df_note = pd.read_csv(orig_note_fpath, low_memory=False)\n",
+    "print(f'{orig_note_fpath} - {len(df_note)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/mimic3/split/NOTEEVENTS0.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS1.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS2.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS3.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS4.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS5.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS6.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS7.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS8.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS9.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS10.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS11.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS12.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS13.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS14.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS15.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS16.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS17.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS18.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS19.csv - 100000\n",
+      "../data/mimic3/split/NOTEEVENTS20.csv - 83180\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write splits\n",
+    "if not os.path.exists(note_split_dir):\n",
+    "    os.makedirs(note_split_dir)\n",
+    "\n",
+    "for i in range(0, len(df_note)-1, note_per_split):\n",
+    "    note_split = df_note[i:i+note_per_split]\n",
+    "    split_fpath = os.path.join(note_split_dir, f'NOTEEVENTS{i//note_per_split}.csv')\n",
+    "    note_split.to_csv(split_fpath, index=False)\n",
+    "    print(f'{split_fpath} - {len(note_split)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build Lexicon for CIM\n",
+    "\n",
+    "This part builds a lexicon used in synthetic misspelling generation and dictionary matching for our character language model.\n",
+    "\n",
+    "1. For English words, please download `english.txt` from [here](https://github.com/dwyl/english-words/tree/7cb484da5de560c11109c8f3925565966015e5a9) (the version of Aug 23, 2020, or commit 7cb484d) and put under `data/english_words`.\n",
+    "2. For medical lexicon, Download LRWD and prevariants of the SPECIALIST Lexicon from [LSG website](https://lhncbc.nlm.nih.gov/LSG/Projects/lexicon/current/web/release/) (we use 2018AB version) and and put under `data/umls`. \n",
+    "3. To compare the generated lexicon with the lexicon of Fivez et al. please download `lexicon_en.json` file from https://github.com/clips/clinspell/tree/master/data and put under `data/mimic_clinspell`."
    ]
   },
   {
@@ -36,10 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "english_words_fpath = '../data/english_words/words.txt'\n",
+    "umls_dir = '../data/umls/'\n",
+    "lexicon_out_dir = '../data/lexicon'\n",
+    "lexicon_out_fname = 'lexicon.json'\n",
+    "\n",
     "alpha_set = set(\"abcdefghijklmnopqrstuvwxyz\")\n",
     "allowed_char_set = set(\"abcdefghijklmnopqrstuvwxyz'-&\")\n",
     "char_set = set(\"0123456789abcdefghijklmnopqrstuvwxyz+-*/^.,;:=!?'()[]{} \")"
@@ -47,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +154,6 @@
    ],
    "source": [
     "# Load english words\n",
-    "english_words_fpath = '../data/english_words/words.txt'\n",
     "with open(english_words_fpath, 'r') as fd:\n",
     "    english_vocab = [l.strip().lower() for l in fd.readlines()]\n",
     "english_vocab = [w for w in english_vocab if (all([c in allowed_char_set for c in w]) and w[0] in alpha_set)]\n",
@@ -71,37 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "umls_dir = '../data/umls/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "998215076ba445eab1318cf35b7564f6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1304243 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████| 1304243/1304243 [00:03<00:00, 371073.89it/s]"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "LEXICON LRWD has 401471 words\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -124,28 +208,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8503d5ec278a4b99aecef9692a8155ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/923076 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████| 923076/923076 [00:04<00:00, 197718.49it/s]"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "LEXICON prevariants has 509533 words\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -166,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -203,16 +287,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing lexicon to ../data/lexicon/lexicon.json\n"
+     ]
+    }
+   ],
    "source": [
     "# Write the lexicon into a file\n",
-    "if not os.path.exists('../data/lexicon'):\n",
-    "    os.makedirs('../data/lexicon')\n",
-    "with open('../data/lexicon/lexicon.json', 'w') as fd:\n",
+    "if not os.path.exists(lexicon_out_dir):\n",
+    "    print(f'Creating directory {lexicon_out_dir}')\n",
+    "    os.makedirs(lexicon_out_dir)\n",
+    "    \n",
+    "lexicon_out_fpath = os.path.join(lexicon_out_dir, lexicon_out_fname)\n",
+    "with open(lexicon_out_fpath, 'w') as fd:\n",
+    "    print(f'Writing lexicon to {lexicon_out_fpath}')\n",
     "    json.dump(total_vocab, fd)"
    ]
   },
@@ -234,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -317,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -343,26 +439,26 @@
      "output_type": "stream",
      "text": [
       "Ours - Clinspell = 530640 words\n",
-      "autolyses\n",
-      "post-coital\n",
-      "wrynecked\n",
-      "tirracke\n",
-      "samos\n",
-      "greigites\n",
-      "archpastor\n",
-      "hysteropexies\n",
-      "cosher\n",
-      "iodochloroxyquinolines\n",
-      "exosepsis\n",
-      "infertilities\n",
-      "mid-morning\n",
-      "pulegol\n",
-      "archimime\n",
-      "non-processing\n",
-      "sphericist\n",
-      "vlgs\n",
-      "diphosphokinases\n",
-      "underprocessed\n"
+      "hejazi\n",
+      "overbrim\n",
+      "cerinthian\n",
+      "cookee\n",
+      "pokies\n",
+      "nadja\n",
+      "theodosian\n",
+      "inoculated\n",
+      "murph\n",
+      "swaths\n",
+      "fluoroscopes\n",
+      "vitriolate\n",
+      "mystifiedly\n",
+      "ministrants\n",
+      "nunez\n",
+      "incepts\n",
+      "self-exchange\n",
+      "p-s\n",
+      "non-mesonic\n",
+      "refences\n"
      ]
     }
    ],
@@ -376,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -384,26 +480,26 @@
      "output_type": "stream",
      "text": [
       "Clinspell - Ours = 1184 words\n",
-      "restarter\n",
-      "l(f)\n",
-      "self/not-self\n",
-      "night's\n",
-      "zinc's\n",
-      "laryngological,\n",
-      "inhibitor/plasmin\n",
-      "wv/wv\n",
-      "amelia's\n",
-      "email's\n",
-      "brazil's\n",
-      "leader's\n",
-      "heart's\n",
-      "embezzler's\n",
-      "logicals\n",
-      "serine/threonine\n",
-      "anglophilia's\n",
-      "preallocation\n",
-      "cowgirl's\n",
-      "aristotelian's\n"
+      "snarfed\n",
+      "reluctances\n",
+      "fews\n",
+      "des(ethoxycarbonyl)loratadine\n",
+      "rerouter\n",
+      "maintainer's\n",
+      "rerouters\n",
+      "prototype's\n",
+      "iran's\n",
+      "remodulator's\n",
+      "amdahl's\n",
+      "spotlight's\n",
+      "concern/information\n",
+      "reroutings\n",
+      "preallocation's\n",
+      "reprogrammer\n",
+      "kludger\n",
+      "na+-taurocholate\n",
+      "backslashing\n",
+      "baby's\n"
      ]
     }
    ],
@@ -427,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +582,7 @@
        "0.050400916380297825"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +620,7 @@
      "output_type": "stream",
      "text": [
       "Clinspell did not cover 24 corrections\n",
-      "['diverticuli', 'steroids', 'rehospitalization', 'epiploicae', 'bronchodilations', 'softeners', 'prostheses', 'contusions', 'intubed', 'groins', 'immunosuppressants', 'diplococci', 'sphincterotomies', 'echinocytes', 'underdamped', 'anxiolytics', 'genteal', 'troponins', 'antiarrhythmics', 'stabilizing', 'eosinophils', 'hypodensities', 'myalgias', 'stabilized']\n"
+      "['stabilizing', 'rehospitalization', 'diverticuli', 'softeners', 'stabilized', 'echinocytes', 'genteal', 'intubed', 'diplococci', 'prostheses', 'troponins', 'immunosuppressants', 'steroids', 'hypodensities', 'anxiolytics', 'epiploicae', 'sphincterotomies', 'eosinophils', 'myalgias', 'underdamped', 'contusions', 'groins', 'antiarrhythmics', 'bronchodilations']\n"
      ]
     }
    ],
@@ -541,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -561,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +701,7 @@
      "output_type": "stream",
      "text": [
       "Dictionary did not cover 52 corrections\n",
-      "['propofol', 'glargine', 'femoralis', 'diverticuli', 'cyclosporin', 'paracolic', 'cisplatin', 'hyperlucency', 'nondiagnostic', 'inferoseptal', 'senekot', 'suprahilar', 'fer-in-sol', 'parafalcine', 'isordil', 'retroorbital', 'epiploicae', 'robitussin', 'demargination', 'bronchodilations', 'integrilin', 'verapamil', 'celecoxib', 'intubed', 'trach', 'tramadol', 'metoprolol', 'sphincterotomies', 'ventriculostomy', 'echinocytes', 'underdamped', 'anxiolytics', 'genteal', 'troponins', 'antiarrhythmics', 'eosinophils', 'etanercept', 'levetiracetam', 'atazanavir', 'zyprexa', 'arimidex', 'miacalcic', 'rocuronium', 'levemir', 'cefotaxime', 'imipenem', 'ferrlecit', 'isoechoic', 'pleurodesis', 'hypodensities', 'lichenified', 'hemithorax']\n"
+      "['propofol', 'etanercept', 'femoralis', 'atazanavir', 'suprahilar', 'robitussin', 'rocuronium', 'diverticuli', 'echinocytes', 'paracolic', 'tramadol', 'genteal', 'celecoxib', 'verapamil', 'retroorbital', 'hyperlucency', 'imipenem', 'intubed', 'cyclosporin', 'inferoseptal', 'isordil', 'glargine', 'demargination', 'metoprolol', 'troponins', 'nondiagnostic', 'fer-in-sol', 'parafalcine', 'miacalcic', 'hypodensities', 'cisplatin', 'trach', 'anxiolytics', 'isoechoic', 'ferrlecit', 'epiploicae', 'sphincterotomies', 'zyprexa', 'eosinophils', 'levemir', 'pleurodesis', 'underdamped', 'integrilin', 'antiarrhythmics', 'levetiracetam', 'lichenified', 'cefotaxime', 'ventriculostomy', 'hemithorax', 'arimidex', 'senekot', 'bronchodilations']\n"
      ]
     }
    ],
@@ -615,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -643,7 +739,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -657,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
