--- a/scripts/build_vocab_corpus.ipynb
+++ b/scripts/build_vocab_corpus.ipynb
@@ -313,12 +313,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Analysis\n",
     "\n",
-    "The code below is used only for comparing with clinspell lexicon and not necessary for our method."
+    "The code below is used only for comparing with clinspell lexicon and not necessary for our method.  \n",
+    "To run the cells below, please download `lexicon_en.json` from the [Clinspell repo](https://github.com/clips/clinspell/tree/master/data) and put under `data/mimic_clinspell`."
    ]
   },
   {
