--- a/scripts/preprocessing_clinspell.ipynb
+++ b/scripts/preprocessing_clinspell.ipynb
@@ -18,8 +18,7 @@
     "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "from utils import clean_text, sanitize_text\n",
-    "from mimic_tools import MIMICPseudonymizer"
+    "from utils import clean_text, sanitize_text"
    ]
   },
   {
@@ -2157,7 +2156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2171,7 +2170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
